--- a/styles.css
+++ b/styles.css
@@ -225,23 +225,6 @@ h2 {
 }
 
 
-
-
-
-
-/* #mensajeFinal {
-    font-family: 'Courier New', Courier, monospace;
-    background-color: rgba(228, 238, 249, .2);
-    font-size: 2rem;
-    color: #0C6090;
-    padding: 1.4rem;
-
-    width: 50%;
-    margin: 25px auto;
-    border-radius: 15px;
-
-} */
-
 #mensajes {
     font-family: 'Courier New', Courier, monospace;
     display: flex;
@@ -306,21 +289,6 @@ h2 {
 }
 
 
-.tarjetavida {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: rgba(250, 253, 235, .8);
-    backdrop-filter: blur(70px);
-    border: var(--border-blur);
-    box-shadow: var(--box-shadow);
-    border-radius: 10px;
-    padding: 2rem;
-    width: 19rem;
-    height: 25rem;
-}
 
 #vidas-jugador,
 #vidas-enemigo {
@@ -329,8 +297,7 @@ h2 {
     font-size: 4rem;
 }
 
-#jugador,
-#enemigo {
+#jugador, #enemigo {
     font-family: 'Courier New', Courier, monospace;
     color: #ebe7e4;
     font-size: 1.2rem;
@@ -342,6 +309,20 @@ h2 {
     justify-content: center;
 }
 
-@media (max-width: 360px){
-    
+.tarjetas-finales{
+    display: flex; 
+    justify-content: space-evenly;
+}
+
+@media (max-width: 600px){
+    .tarjetas-finales {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .square-button {
+        margin-top: 10px;
+    }
 }
